integrate map&pics

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,14 @@
             android:layout_height="wrap_content"
             android:text="start storage"
             android:onClick="startOnClick"
+            android:enabled="false"
             android:id="@+id/btn_start_storage"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Open Navigator"
             android:onClick="startOnClick"
+            android:enabled="false"
             android:id="@+id/btn_start_navigator"/>
         <Button
             android:layout_width="wrap_content"
