--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".diary.Diary_mapNPictures">
+    tools:context=".diary.Diary_mapNPictures"
+    android:id="@+id/diary_mapNpics_Root">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/diary_mapNpics_MapFrame"
