--- a/app/src/main/res/layout/layout_gallerymenu.xml
+++ b/app/src/main/res/layout/layout_gallerymenu.xml
@@ -1,26 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#80000000"
-    android:gravity="center">
-    <android.support.constraint.Guideline
-        android:id="@+id/menuGuidelineUpper"
+    android:background="@color/black_overlay"
+    android:id="@+id/gallerydetail_menuouter">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/gallerydetail_menuinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.3"/>
-        <Button
-            android:id="@+id/deleteAll"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingHorizontal="10dp"
+        android:background="#FFEEEEEE">
+
+        <TextView
+            android:id="@+id/gallerydetail_menuTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="전체 삭제"
-            app:layout_constraintBottom_toBottomOf="@id/menuGuidelineUpper"/>
+            android:text="작업 선택..."
+            android:paddingHorizontal="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
         <Button
-            android:id="@+id/sendFiles"
+            android:id="@+id/gallerydetail_deleteAll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="결정"
-            app:layout_constraintBottom_toBottomOf="@id/deleteAll"/>
+            app:layout_constraintTop_toBottomOf="@id/gallerydetail_menuTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="전체 삭제"/>
+
+        <Button
+            android:id="@+id/gallerydetail_OK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/gallerydetail_deleteAll"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="결정"/>
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
