--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -1,101 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#0099cc"
     tools:context=".album.GalleryDetail">
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_topbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:background="#AAAAAA"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@id/gallerydetail_guideline"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/gallerydetail_topbar"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="#AAAAAA"
-                app:layout_constraintHeight_percent="0.1"
-                app:layout_constraintBottom_toTopOf="@id/gallerydetail_guideline"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:orientation="horizontal">
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/gallerydetail_btn_back"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/arrow_left"
-                    android:padding="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:onClick="gallerydetail_onClick"/>
-                <TextView
-                    android:id="@+id/gallerydetail_imagename"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="IMAGE_NAME"
-                    android:gravity="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/gallerydetail_btn_back"
-                    app:layout_constraintRight_toLeftOf="@id/gallerydetail_btn_detail"/>
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/gallerydetail_btn_detail"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/detail"
-                    android:padding="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:onClick="gallerydetail_onClick"/>
-
-            </android.support.constraint.ConstraintLayout>
-            <android.support.constraint.Guideline
-                android:id="@+id/gallerydetail_guideline"
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/gallerydetail_btn_back"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.1" />
-            <ImageView
-                android:id="@+id/gallerydetail_Image"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/gallerydetail_guideline"
-                app:layout_constraintBottom_toBottomOf="@id/gallerydetail_guidelineBottom"
-                android:background="#FFFFFF"
-                android:src="@drawable/blank"/>
-            <android.support.constraint.Guideline
-                android:id="@+id/gallerydetail_guidelineBottom"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9"/>
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/gallerydetail_guidelineBottom"
+                android:layout_height="match_parent"
+                android:src="@drawable/arrow_left"
+                android:padding="10dp"
+                android:onClick="gallerydetail_onClick"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:background="#FFFFFF">
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/gallerydetail_imagename"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="IMAGE_NAME"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp"
+                app:layout_constraintLeft_toRightOf="@id/gallerydetail_btn_back"
+                app:layout_constraintRight_toLeftOf="@id/gallerydetail_btn_detail"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/gallerydetail_btn_detail"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/detail"
+                android:padding="10dp"
+                android:onClick="gallerydetail_onClick"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
-    </FrameLayout>
+        <android.support.constraint.Guideline
+            android:id="@+id/gallerydetail_guideline"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1" />
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/gallerydetail_Image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#FFFFFF"
+            android:src="@drawable/blank"
+            app:layout_constraintBottom_toBottomOf="@id/gallerydetail_guidelineBottom"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gallerydetail_guideline" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/gallerydetail_guidelineBottom"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.9" />
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gallerydetail_guidelineBottom">
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/gallerydetail_detailMenu_Root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:translationZ="1dp"
+        android:visibility="gone"
+        android:background="@color/black_overlay">
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_detailMenu_OuterUpper"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/gallerydetail_detailMenu_Inner"
+            android:onClick="gallerydetail_onClick">
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_detailMenu_Inner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#FFFFFF"
+            android:layout_marginHorizontal="20dp"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/gallerydetail_detailMenu_Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="작업 선택..."
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginHorizontal="5dp"/>
+            <Button
+                android:id="@+id/gallerydetail_detailMenu_btn_Delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/gallerydetail_detailMenu_Title"
+                android:onClick="gallerydetail_onClick"/>
+            <Button
+                android:id="@+id/gallerydetail_detailMenu_btn_Select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="선택"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/gallerydetail_detailMenu_btn_Delete"
+                android:onClick="gallerydetail_onClick"/>
+        </android.support.constraint.ConstraintLayout>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_detailMenu_OuterLower"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gallerydetail_detailMenu_Inner"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="gallerydetail_onClick">
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.constraint.ConstraintLayout>
