--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -2,67 +2,103 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/diary_mapNpics_Root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".diary.Diary_mapNPictures"
-    android:id="@+id/diary_mapNpics_Root">
+    tools:context=".diary.Diary_mapNPictures">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/diary_mapNpics_MapFrame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:padding="20dp"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="20dp">
+        app:layout_constraintTop_toTopOf="parent">
+
         <android.support.constraint.ConstraintLayout
             android:id="@+id/diary_mapNpics_TitleBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.15"
             android:paddingHorizontal="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:id="@+id/diary_mapNpics_TitleImage"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:src="@drawable/diary"
                 android:background="#00000000"
-                android:scaleType="centerCrop"/>
-            <TextView
-                android:id="@+id/diary_mapNpics_TitleText"
+                android:scaleType="centerCrop"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="Title"
-                android:gravity="center_vertical"
-                android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
-                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"/>
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
+                android:paddingLeft="10dp">
+                <TextView
+                    android:id="@+id/diary_mapNpics_ReadTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Title"
+                    android:gravity="center_vertical"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+
+                <EditText
+                    android:id="@+id/diary_mapNpics_EditTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+            </android.support.constraint.ConstraintLayout>
+
+
+            <ImageButton
+                android:id="@+id/diary_mapNpics_EditStart"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pen"
+                android:padding="5dp"
+                android:scaleType="centerCrop"
+                android:background="#00000000"
+                android:visibility="visible"
+                android:onClick="diary_onEditClick"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageButton
                 android:id="@+id/diary_mapNpics_TitleLike"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:src="@drawable/heartgrey"
                 android:background="#00000000"
                 android:scaleType="centerCrop"
-                android:onClick="diary_onLikeClick"/>
+                android:onClick="diary_onLikeClick"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
+
         <FrameLayout
             android:id="@+id/diary_mapNpics_Map_Outer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="10dp">
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox">
+
             <kr.ac.kw.coms.globealbum.map.MyMapView
                 android:id="@+id/diary_mapNpics_Map"
                 android:layout_width="match_parent"
@@ -91,18 +127,9 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"
         app:layout_constraintHeight_percent="0.35"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <EditText
-            android:id="@+id/diary_mapNpics_EditTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="제목"
-            android:maxLines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
 
         <EditText
             android:id="@+id/diary_mapNpics_EditBody"
@@ -111,7 +138,7 @@
             android:hint="내용"
             app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_EditSave"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_EditTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/diary_mapNpics_EditSave"
@@ -137,47 +164,10 @@
         android:id="@+id/diary_mapNpics_Read"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.35"
-        app:layout_constraintLeft_toLeftOf="parent">
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_ReadHead"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_ReadBody">
-            <TextView
-                android:id="@+id/diary_mapNpics_ReadTitle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:hint="제목"
-                android:maxLines="1"
-                android:layout_marginLeft="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
-                />
-
-            <ImageButton
-                android:id="@+id/diary_mapNpics_EditStart"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:onClick="diary_onEditClick"
-                android:src="@drawable/pen"
-                android:scaleType="fitCenter"
-                android:padding="5dp"
-                android:background="#00000000"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_ReadTitle"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        </android.support.constraint.ConstraintLayout>
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
 
         <TextView
             android:id="@+id/diary_mapNpics_ReadBody"
@@ -185,9 +175,10 @@
             android:layout_height="0dp"
             android:hint="내용"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_ReadHead" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
