--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -114,18 +114,30 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/gallerydetail_detailMenu_Inner"
-            android:onClick="gallerydetail_onClick">
+            android:onClick="gallerydetail_CloseMenu">
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/gallerydetail_detailMenu_Inner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/gallerydetail_detailMenu_OuterLeft"
+            android:layout_width="20dp"
+            android:layout_height="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/gallerydetail_detailMenu_Inner"
+            app:layout_constraintBottom_toBottomOf="@id/gallerydetail_detailMenu_Inner"
+            app:layout_constraintRight_toLeftOf="@id/gallerydetail_detailMenu_Inner"
+            android:onClick="gallerydetail_CloseMenu">
+
+        </android.support.constraint.ConstraintLayout>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_detailMenu_Inner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toRightOf="@id/gallerydetail_detailMenu_OuterLeft"
+            app:layout_constraintRight_toLeftOf="@id/gallerydetail_detailMenu_OuterRight"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="#FFFFFF"
-            android:layout_marginHorizontal="20dp"
             android:padding="10dp">
             <TextView
                 android:id="@+id/gallerydetail_detailMenu_Title"
@@ -153,13 +165,23 @@
                 android:onClick="gallerydetail_onClick"/>
         </android.support.constraint.ConstraintLayout>
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/gallerydetail_detailMenu_OuterRight"
+            android:layout_width="20dp"
+            android:layout_height="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/gallerydetail_detailMenu_Inner"
+            app:layout_constraintBottom_toBottomOf="@id/gallerydetail_detailMenu_Inner"
+            app:layout_constraintLeft_toRightOf="@id/gallerydetail_detailMenu_Inner"
+            android:onClick="gallerydetail_CloseMenu">
+        </android.support.constraint.ConstraintLayout>
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/gallerydetail_detailMenu_OuterLower"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gallerydetail_detailMenu_Inner"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="gallerydetail_onClick">
+            android:onClick="gallerydetail_CloseMenu">
 
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
