--- a/app/src/main/res/layout/activity_diary_mine_main.xml
+++ b/app/src/main/res/layout/activity_diary_mine_main.xml
@@ -19,51 +19,101 @@
             android:id="@+id/diary_mine_main_Back"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:onClick="diary_onBackClick"
             android:scaleType="fitCenter"
             android:src="@drawable/arrow_left" />
 
     </RelativeLayout>
+
     <TabHost
         android:id="@+id/diary_mine_main_TabHost"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/diary_mine_main_Toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mine_main_Toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent">
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
             </TabWidget>
+
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <kr.ac.kw.coms.globealbum.album.GroupDiaryView
                     android:id="@+id/diary_mine_main_ImageList"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
+
                 <kr.ac.kw.coms.globealbum.album.GroupDiaryView
                     android:id="@+id/diary_mine_main_JourneyList"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
             </FrameLayout>
         </LinearLayout>
 
     </TabHost>
 
-
-
-
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_mine_main_menuRoot"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/black_overlay"
+        android:translationZ="1dp"
+        android:visibility="gone"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="diary_mine_main_CloseMenu">
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mine_main_menuInner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="#FFFFFF">
+            <TextView
+                android:id="@+id/diary_mine_main_menuTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="작업 선택..."
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="5dp"/>
+            <Button
+                android:id="@+id/diary_mine_main_menuEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="수정"
+                android:onClick="diary_mine_main_EditStart"
+                app:layout_constraintTop_toBottomOf="@id/diary_mine_main_menuTitle"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+            <Button
+                android:id="@+id/diary_mine_main_menuDelete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:onClick="diary_mine_main_Delete"
+                app:layout_constraintTop_toBottomOf="@id/diary_mine_main_menuEdit"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
