--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -40,7 +40,8 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#00000000"/>
+            android:background="#00000000"
+            android:onClick="diary_edit_onClick"/>
     </android.support.constraint.ConstraintLayout>
     <TextView
         android:id="@+id/diary_edit_titleLabel"
