--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -10,7 +10,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#000000"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guide_top"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,18 +27,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="gallery_onClick"/>
 
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/btn_detail"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/detail"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="gone"
-            android:onClick="gallery_onClick"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -53,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        android:background="#000000"
+        android:background="#FFFFFF"
         app:layoutManager="android.support.v7.widget.GridLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
