new diary & constants class

--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintHeight_percent="0.2"
-    android:id="@+id/verticalList_Root">
-    <ImageView
-        android:id="@+id/verticalList_Image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/blank"
-        android:scaleType="centerCrop"/>
-    <TextView
-        android:id="@+id/verticalList_Title"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        app:layout_constraintLeft_toRightOf="@id/verticalList_Image"
-        app:layout_constraintRight_toLeftOf="@id/verticalList_Delete"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center_vertical"
-        android:text="IMAGE" />
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             app:layout_constraintHeight_percent="0.2"
+                                             android:id="@+id/verticalList_Root">
     <Button
-        android:id="@+id/verticalList_Delete"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.15"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="제거"/>
+            android:id="@+id/verticalList_MoveUp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
+            app:layout_constraintRight_toRightOf="@id/verticalList_MoveDown"
+            android:text="위로"/>
+    <Button
+            android:id="@+id/verticalList_MoveDown"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/verticalList_MoveUp"
+            android:text="아래로"/>
+    <ImageView
+            android:id="@+id/verticalList_Image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.25"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toRightOf="@id/verticalList_MoveDown"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/blank"
+            android:scaleType="centerCrop"/>
+    <TextView
+            android:id="@+id/verticalList_Title"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toRightOf="@id/verticalList_Image"
+            app:layout_constraintRight_toLeftOf="@id/verticalList_Delete"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center_vertical"
+            android:text="IMAGE"/>
+    <Button
+            android:id="@+id/verticalList_Delete"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.15"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="제거"/>
 
 </android.support.constraint.ConstraintLayout>
