--- a/app/src/main/res/layout/activity_diary_mine_main.xml
+++ b/app/src/main/res/layout/activity_diary_mine_main.xml
@@ -37,7 +37,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/zoom_in"
+            android:src="@drawable/add"
             android:scaleType="fitXY"
             android:background="#00000000"
             android:layout_marginBottom="50dp"
