--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,7 +8,7 @@
     tools:context=".game.GameActivity">
 
     <android.support.constraint.Guideline
-        android:id="@+id/guide_top"
+        android:id="@+id/guide_login_horizontal_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -42,7 +42,7 @@
         app:layout_constraintBottom_toTopOf="@id/guide_mid"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guide_top"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
         tools:background="#aaa" />
 
     <View
