--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="kr.ac.kw.coms.globealbum.MainActivity">
 
     <android.support.constraint.Guideline
-            android:id="@+id/guide_top"
+            android:id="@+id/guide_login_horizontal_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -17,19 +17,19 @@
             android:layout_height="0dp"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/guide_top"
+            app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
             android:background="#AAD7F8"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/guide_top"
+            app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="20dp"
             android:text="Profile"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/guide_top"
+            app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="20dp"
             android:src="@drawable/blue_flag"/>
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guide_top"
+            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
             app:layout_constraintBottom_toTopOf="@id/imageview_game_my_diary"
             android:text="Game"/>
     <Button
@@ -78,7 +78,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guide_top"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
         app:layout_constraintLeft_toLeftOf="parent"
         android:orientation="vertical">
         <Button
