--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -11,38 +11,82 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:background="@drawable/login_background" />
+    <android.support.constraint.Guideline
+            android:id="@+id/guide_login_vertical_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.2"/>
+    <android.support.constraint.Guideline
+            android:id="@+id/guide_login_vertical_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8"/>
+    <android.support.constraint.Guideline
+            android:id="@+id/guide_login_vertical_left_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3"/>
+    <android.support.constraint.Guideline
+            android:id="@+id/guide_login_horizontal_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.85"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Sign in with "
+        android:text="---Sign in with---"
         android:textAlignment="center"
         android:textSize="15pt"
-        app:layout_constraintBottom_toTopOf="@id/guide_top"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guide_top"
+        android:id="@+id/guide_login_horizontal_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.30" />
+        app:layout_constraintGuide_percent="0.2" />
+    <android.support.constraint.Guideline
+            android:id="@+id/guide_login_horizontal_mid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5"/>
 
-    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:src=""/>
+    <ImageView
+            android:id="@+id/imageview_login_id_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/login_id_icon"
+            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
+            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"/>
+    <ImageView
+            android:id="@+id/imageview_login_pw_icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/login_pw_icon"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_top"
+            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_left_pic"/>
     <EditText
         android:id="@+id/et_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="55dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:text="ID"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guide_top" />
+        app:layout_constraintLeft_toRightOf="@id/imageview_login_id_icon"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+        app:layout_constraintTop_toTopOf="@id/imageview_login_id_icon"/>
 
     <EditText
         android:id="@+id/et_password"
@@ -51,29 +95,45 @@
         android:ems="10"
         android:inputType="textPassword"
         android:text="password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_email" />
+        app:layout_constraintLeft_toRightOf="@id/imageview_login_pw_icon"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+        app:layout_constraintTop_toBottomOf="@id/et_email"/>
 
-    <Button
+    <ImageView
         android:id="@+id/btn_login"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:onClick="onLogin"
         android:text="LOGIN"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
+        android:src="@drawable/login_login_btn"
+        android:clickable="true"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+        app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_mid" />
 
-    <Button
+    <ImageView
         android:id="@+id/btnAccount"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:onClick="onRegister"
         android:text="NEW ACCOUNT"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+        android:src="@drawable/login_register_btn"
+        android:clickable="true"
+        app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+        app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+        app:layout_constraintTop_toBottomOf="@id/btn_login"/>
+
+    <ImageView
+            android:id="@+id/btnForget"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:onClick="onForget"
+            android:src="@drawable/login_forget_btn"
+            android:scaleType="fitStart"
+            android:text="FORGET YOUR PASSWORD?"
+            android:clickable="true"
+            app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
+            app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
+            app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_bottom"/>
 
 </android.support.constraint.ConstraintLayout>
