--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="3dp"
-        app:layout_constraintBottom_toTopOf="@id/guide_top"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="3dp"
-        app:layout_constraintBottom_toTopOf="@id/guide_top"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintLeft_toRightOf="@id/btn_menu"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,13 +30,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="3dp"
-        app:layout_constraintBottom_toTopOf="@id/guide_top"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_top"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guide_top"
+        android:id="@+id/guide_login_horizontal_top"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -47,7 +47,7 @@
         android:layout_width="130dp"
         android:layout_height="200dp"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/guide_top"
+        app:layout_constraintBottom_toBottomOf="@id/guide_login_horizontal_top"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn2"
@@ -58,7 +58,7 @@
         android:layout_width="130dp"
         android:layout_height="200dp"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/guide_top"
+        app:layout_constraintBottom_toBottomOf="@id/guide_login_horizontal_top"
         app:layout_constraintLeft_toRightOf="@id/btn1"
         app:layout_constraintRight_toLeftOf="@id/btn3"
         app:layout_constraintTop_toBottomOf="parent" />
@@ -68,7 +68,7 @@
         android:layout_width="130dp"
         android:layout_height="200dp"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/guide_top"
+        app:layout_constraintBottom_toBottomOf="@id/guide_login_horizontal_top"
         app:layout_constraintLeft_toRightOf="@id/btn2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
